--- a/portfolio/src/app/layouts/body/body.component.html
+++ b/portfolio/src/app/layouts/body/body.component.html
@@ -1,8 +1,12 @@
-<div class="flex">
-  <div class="">
-    <identity></identity>
-    <portfolio-side-bar></portfolio-side-bar>
-  </div>
-  <portfolio-background-content></portfolio-background-content>
-</div>
 
+<div class="p-[1rem] md:w-[80vw] m-auto">
+  <div class="md:flex">
+    <div class="personal">
+      <identity></identity>
+      <portfolio-side-bar></portfolio-side-bar>
+    </div>
+    <div class="professional">
+      <portfolio-background-content></portfolio-background-content>
+    </div>
+  </div>
+</div>
