--- a/portfolio/src/app/layouts/main-layout/main-layout.component.html
+++ b/portfolio/src/app/layouts/main-layout/main-layout.component.html
@@ -1,3 +1,5 @@
 <portfolio-nav-bar></portfolio-nav-bar>
-<portfolio-body></portfolio-body>
+<div class="portfolio-body">
+  <portfolio-body></portfolio-body>
+</div>
 <portfolio-footer></portfolio-footer>
