--- a/portfolio/src/app/views/identity/identity.component.html
+++ b/portfolio/src/app/views/identity/identity.component.html
@@ -1,1 +1,9 @@
-<p>identity works!</p>
+<h1 class="misc-secondary">
+  {{ personalInfoDetail.lastName }}
+</h1>
+<h1>
+  {{ personalInfoDetail.firstName }}
+</h1>
+<p class="misc-secondary text-800">
+  {{ personalInfoDetail.role }}
+</p>
