--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 
 .title-100 {
@@ -118,23 +118,27 @@
 
 @layer base {
   // body {@apply bg-taskly-background text-taskly-white};
-  h1 {@apply text-2xl title-600 mb-1};
-  h2 {@apply text-xl title-600 mb-1};
-  h3 {@apply text-lg title-600 mb-1};
+  h1 {@apply text-[50px] leading-[50px] title-600 mb-1};
+  h2 {@apply text-4xl title-600 mb-1};
+  h3 {@apply text-2xl title-600 mb-1};
   h4 {@apply text-lg title-500 mb-1};
   h5 {@apply text-base title-500 mb-1 leading-4   };
   h6, p, span {@apply text-400 text-sm mb-1};
 }
 
 @layer components {
-  // .card-container { @apply rounded-[1rem] p-4 hover:border-taskly-vermilion-100 hover:border-opacity-40  border border-transparent w-64 h-fit transition ease-linear};
-  // .card-task {@apply bg-taskly-woodsmoke-900 p-2 rounded w-full min-h-9}
-  // .card-container h3{ @apply text-taskly-vermilion-600}
-  // .card-task h5{ @apply underline decoration-taskly-vermilion-600}
+
+  .personal { @apply md:w-1/3 misc-primary}
+  .professional { @apply md:w-2/3 bg-main-background-color p-[1rem] rounded-[10px]}
+
+  .portfolio-body { @apply  bg-gradient-to-b from-page-backgound-top-gradient via-page-backgound-mid-gradient to-page-backgound-bottom-gradient }
 
   .error {@apply text-red-500 text-sm}
   .info {@apply text-sm}
   .success {@apply text-green-500 text-sm}
+
+  .misc-secondary { @apply text-misc-secondary-color text-400 }
+  .misc-primary { @apply text-misc-primary-color }
 
   button, input[type="submit"] {@apply inline-block text-center px-6 rounded-lg cursor-pointer w-full min-h-9 min-w-9 text-center disabled:cursor-not-allowed}
   // .btn-outline {@apply border border-solid border-taskly-vermilion-600 text-taskly-vermilion-600 hover:border-taskly-vermilion-700 hover:text-taskly-vermilion-700 transition ease-linear active:border-taskly-vermilion-800 active:text-taskly-vermilion-800
