--- a/portfolio/src/app/views/education/education.component.html
+++ b/portfolio/src/app/views/education/education.component.html
@@ -1,1 +1,6 @@
-<p>education works!</p>
+<professional-title
+  [title]="'EDUCATION'"
+/>
+@for (educationItem of educationList; track $index) {
+
+}
