--- a/portfolio/src/app/views/education/education.component.html
+++ b/portfolio/src/app/views/education/education.component.html
@@ -2,5 +2,10 @@
   [title]="'EDUCATION'"
 />
 @for (educationItem of educationList; track $index) {
-
+  <professional-block
+    [name]="educationItem.title"
+    [institution]="educationItem.institution"
+    [date]="educationItem.date"
+    [description]="educationItem.description"
+  />
 }
