fix: education link + place

--- a/portfolio/src/app/views/education/education.component.html
+++ b/portfolio/src/app/views/education/education.component.html
@@ -5,7 +5,9 @@
   <professional-block
     [name]="educationItem.title"
     [institution]="educationItem.institution"
+    [link]="educationItem.link"
     [date]="educationItem.date"
+    [place]="educationItem.place"
     [description]="educationItem.description"
   />
 }
