--- a/portfolio/src/app/utils/professional-block/professional-block.component.html
+++ b/portfolio/src/app/utils/professional-block/professional-block.component.html
@@ -1,6 +1,11 @@
 <div class="professional-block">
   <h3 class="professional-name">
-    {{ name }}
+    @if (link) {
+      <a href="{{ link }}" class="underline">{{ name }}</a>
+    }
+    @else {
+      {{ name }}
+    }
   </h3>
 
   <h4 class="professional-institution">
@@ -8,10 +13,15 @@
   </h4>
 
   <div class="professional-date">
-    {{ date }}
+    {{ date }} | {{ place }}
   </div>
 
   <div class="professional-description">
     {{ description }}
+  </div>
+
+  <div class="professional-technologies">
+    @for (tech of technologies; track $index) {}
+    {{ technologies }}
   </div>
 </div>
