--- a/portfolio/src/app/utils/professional-block/professional-block.component.html
+++ b/portfolio/src/app/utils/professional-block/professional-block.component.html
@@ -13,17 +13,25 @@
   </h4>
 
   <div class="professional-date">
-    {{ date }} | {{ place }}
+    <div class="professional-date-items">
+      {{ date }}
+    </div>
+    @if (date && place) {
+      <p class="px-[0.5rem]"> | </p>
+    }
+    <div class="professional-date-items">
+      {{ place }}
+    </div>
   </div>
 
   @if (design) {
-    <div class="">
+    <div class="underline">
       <a href="{{ design }}" class="underline">Check the design here</a>
     </div>
   }
 
   @if (repository) {
-    <div class="">
+    <div class="underline">
       <a href="{{repository}}" class="underline">Check the repository here</a>
     </div>
   }
@@ -33,12 +41,16 @@
     {{ description }}
   </div>
 
-  <div class="professional-technologies">
-    @for (tech of technologies; track $index) {}
-    {{ technologies }}
-  </div>
+  @if (technologies && technologies.length > 0) {
+    <h5 class="mt-[1rem]">Technologies</h5>
+    <div class="professional-technologies">
+      @for (tech of technologies; track $index) {
+        <p>{{ tech }}</p>
+      }
+    </div>
+  }
 
   @if (image) {
-    <img src="image" alt="name" class="mw-100 h-auto">
+    <img src="{{image}}" alt="{{name}}" class="max-w-lg h-auto mx-auto">
   }
 </div>
