--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -123,7 +123,7 @@
   h3 {@apply text-2xl title-600 mb-1};
   h4 {@apply text-lg title-500 mb-1};
   h5 {@apply text-base title-500 mb-1 leading-4   };
-  h6, p, span {@apply text-400 text-sm mb-1};
+  h6, p, span {@apply text-400 text-sm mb-1 };
 }
 
 @layer components {
@@ -132,16 +132,20 @@
 
   .personal { @apply md:w-1/3 misc-primary }
 
+  .presentation { @apply my-[0.75rem] text-500 text-main-description-color text-pretty  }
+
   .professional { @apply md:w-2/3 bg-main-background-color p-[1rem] rounded-[10px] }
   .professional-title { @apply w-[60%] bg-main-block-title-color text-main-background-color pl-[2rem] rounded-[5px] text-500 text-lg }
   .professional-line { @apply w-[40%] border-main-block-title-color my-auto }
 
   .professional-block { @apply my-[1.5rem] }
 
-  .professional-name { @apply text-main-title-color text-600 my-[-0.5rem] text-pretty}
-  .professional-institution { @apply text-main-title-color my-[-0.5rem] text-pretty}
-  .professional-date { @apply text-main-subtitle-color my-0 text-pretty}
+  .professional-name { @apply text-main-title-color text-600 my-[-0.5rem] text-pretty }
+  .professional-institution { @apply text-main-title-color my-[-0.5rem] text-pretty }
+  .professional-date { @apply text-main-subtitle-color my-0 text-pretty flex }
+  .professional-date-items { @apply text-400 }
   .professional-description { @apply text-main-description-color text-pretty }
+  .professional-technologies { @apply grid grid-cols-3 grid-rows-3 }
 
   .error {@apply text-red-500 text-sm}
   .info {@apply text-sm}
