--- a/portfolio/src/app/layouts/body/body.component.html
+++ b/portfolio/src/app/layouts/body/body.component.html
@@ -1,5 +1,4 @@
-
-<div class="p-[1rem] md:w-[80vw] m-auto">
+<div class="p-[1rem] sm:w-[90vw] lg:w-[80vw] m-auto">
   <div class="md:flex">
     <div class="personal">
       <identity></identity>
