--- a/portfolio/src/app/utils/professional-block/professional-block.component.html
+++ b/portfolio/src/app/utils/professional-block/professional-block.component.html
@@ -51,6 +51,6 @@
   }
 
   @if (image) {
-    <img src="{{image}}" alt="{{name}}" class="max-w-lg h-auto mx-auto">
+    <img src="{{image}}" alt="{{name}}" class="project-image">
   }
 </div>
