--- a/portfolio/src/app/views/presentation/presentation.component.html
+++ b/portfolio/src/app/views/presentation/presentation.component.html
@@ -1,4 +1,8 @@
 <professional-title
   [title]="'WHO AM I'"
+  (toggle)="onToggle($event)"
 />
+
+@if(!isToggled){
 <p class="presentation"> {{ personalInfoDetail.presentation }} </p>
+}
