--- a/portfolio/src/app/views/experiences/experiences.component.html
+++ b/portfolio/src/app/views/experiences/experiences.component.html
@@ -1,13 +1,17 @@
 <professional-title
   [title]="'EXPERIENCE'"
+  (toggle)="onToggle($event)"
 />
-@for (experienceItem of experienceList; track $index) {
-  <professional-block
-    [name]="experienceItem.title"
-    [institution]="experienceItem.institution"
-    [date]="experienceItem.date"
-    [place]="experienceItem.place"
-    [description]="experienceItem.description"
-    [technologies]="experienceItem.technologies"
-  />
+
+@if(!isToggled){
+  @for (experienceItem of experienceList; track $index) {
+    <professional-block
+      [name]="experienceItem.title"
+      [institution]="experienceItem.institution"
+      [date]="experienceItem.date"
+      [place]="experienceItem.place"
+      [description]="experienceItem.description"
+      [technologies]="experienceItem.technologies"
+    />
+  }
 }
