--- a/portfolio/src/app/views/knowledge/knowledge.component.html
+++ b/portfolio/src/app/views/knowledge/knowledge.component.html
@@ -1,1 +1,4 @@
-<p>knowledge works!</p>
+<personal-block
+  [title]="'Knowledge'"
+  [stringList]="parseKnowledgeListToStringList(knowledgeList)"
+/>
