--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -152,9 +152,13 @@
   .success {@apply text-green-500 text-sm}
   .toggle-chevron { @apply m-[2px] border rounded-full p-[2px] transition-transform duration-300}
   toggle-chevron { @apply  m-[2px] justify-items-center items-center}
-  // .rotate-180 { @apply border-[5px] }
 
   .misc-secondary { @apply text-misc-secondary-color text-400 }
   .misc-primary { @apply text-misc-primary-color }
+
+  .personal-info-block { @apply  w-[260px] rounded-[10px] p-[0.5rem] items-center bg-misc-secondary-color/25 mb-[0.5rem] }
+  .personal-info-contact { @apply flex flex-row w-[260px] rounded-[10px] py-[0.5rem] items-center bg-misc-secondary-color/25 mb-[0.5rem] }
+  .personal-info-svg { @apply size-5 mx-[0.5rem] }
+  .email { @apply flex flex-row justify-items-center items-center }
 
 }
