--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -129,7 +129,7 @@
 
   .portfolio-body { @apply  bg-gradient-to-b from-page-backgound-top-gradient via-page-backgound-mid-gradient to-page-backgound-bottom-gradient }
 
-  .personal { @apply md:w-1/3 misc-primary }
+  .personal { @apply pr-[2rem] misc-primary }
 
   .presentation { @apply my-[0.75rem] text-500 text-main-description-color text-pretty  }
 
@@ -144,7 +144,7 @@
   .professional-date { @apply text-main-subtitle-color my-[-0.1rem] text-pretty flex }
   .professional-date-items { @apply text-400 }
   .professional-description { @apply text-main-description-color text-pretty }
-  .professional-technologies { @apply grid gap-2 grid-cols-2 md:grid-cols-3 grid-rows-3 my-[1rem]}
+  .professional-technologies { @apply grid gap-2 grid-cols-2 md:grid-cols-3 grid-rows-3 my-[1rem] text-pretty }
   .project-image { @apply max-w-full lg:max-w-lg h-auto mx-auto }
 
   .error {@apply text-red-500 text-sm}
@@ -156,9 +156,10 @@
   .misc-secondary { @apply text-misc-secondary-color text-400 }
   .misc-primary { @apply text-misc-primary-color }
 
-  .personal-info-block { @apply  w-[260px] rounded-[10px] p-[0.5rem] items-center bg-misc-secondary-color/25 mb-[0.5rem] }
-  .personal-info-contact { @apply flex flex-row w-[260px] rounded-[10px] py-[0.5rem] items-center bg-misc-secondary-color/25 mb-[0.5rem] }
-  .personal-info-svg { @apply size-5 mx-[0.5rem] }
-  .email { @apply flex flex-row justify-items-center items-center }
+  .personal-info-block { @apply  w-[260px] rounded-[10px] p-[0.5rem] items-center bg-misc-secondary-color/25 mb-[0.5rem] p-[1rem] text-pretty }
+  .personal-info-contact { @apply flex flex-row w-[260px] rounded-[10px] py-[0.5rem] items-center bg-misc-secondary-color/25 mb-[0.5rem] text-pretty }
+  .personal-info-svg { @apply size-5 mx-[0.5rem] text-pretty }
+  .email { @apply flex flex-row justify-items-center items-center text-pretty }
+  .social { @apply text-pretty break-words }
 
 }
