--- a/portfolio/src/app/views/languages/languages.component.html
+++ b/portfolio/src/app/views/languages/languages.component.html
@@ -1,1 +1,12 @@
-<p>languages works!</p>
+<div class="personal-info-block">
+  <h3>Languages</h3>
+
+  <table class="language-table">
+    @for (language of languagesList; track $index) {
+      <tbody class="language-table-body">
+        <td class="language-table-item"> {{ language.language }} </td>
+        <td class="language-table-item"> {{ language.proficiency }} </td>
+      </tbody>
+    }
+  </table>
+</div>
