--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -122,7 +122,7 @@
   h3 {@apply text-2xl title-600 mb-1};
   h4 {@apply text-lg title-500 mb-1};
   h5 {@apply text-base title-500 mb-1 leading-4   };
-  h6, p, span {@apply text-400 text-sm mb-1 };
+  h6, p, span, thead {@apply text-400 text-sm mb-1 };
 }
 
 @layer components {
@@ -159,7 +159,12 @@
   .personal-info-block { @apply  w-[260px] rounded-[10px] p-[0.5rem] items-center bg-misc-secondary-color/25 mb-[0.5rem] p-[1rem] text-pretty }
   .personal-info-contact { @apply flex flex-row w-[260px] rounded-[10px] py-[0.5rem] items-center bg-misc-secondary-color/25 mb-[0.5rem] text-pretty }
   .personal-info-svg { @apply size-5 mx-[0.5rem] text-pretty }
+  .personal-list { @apply w-fit }
   .email { @apply flex flex-row justify-items-center items-center text-pretty }
   .social { @apply text-pretty break-words }
+  .language { @apply flex flex-row justify-between w-full }
+  .language-table { @apply table-auto border-misc-secondary-color w-full }
+  .language-table-body { @apply w-full }
+  .language-table-item { @apply w-[50%] }
 
 }
