nav bar buttons

--- a/portfolio/src/app/layouts/nav-bar/nav-bar.component.html
+++ b/portfolio/src/app/layouts/nav-bar/nav-bar.component.html
@@ -1,1 +1,8 @@
-<p>nav-bar works!</p>
+<div class="portfolio-nav-bar">
+  <profile-download
+  class="nav-button"
+  />
+  <profile-language
+  class="nav-button"
+  />
+</div>
