--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -127,15 +127,18 @@
 
 @layer components {
 
+  .portfolio-nav-bar { @apply bg-main-block-title-color text-main-background-color h-[3rem] flex flex-row items-center justify-end px-[2rem] }
+  .nav-button { @apply cursor-pointer h-[1.5rem] w-auto mx-[0.5rem] }
+
   .portfolio-body { @apply  bg-gradient-to-b from-page-backgound-top-gradient via-page-backgound-mid-gradient to-page-backgound-bottom-gradient }
 
   .personal { @apply pr-[2rem] misc-primary }
 
   .presentation { @apply my-[0.75rem] text-500 text-main-description-color text-pretty  }
 
-  .professional { @apply md:w-2/3 bg-main-background-color p-[1rem] rounded-[10px] }
-  .professional-title { @apply w-[60%]  md:w-[40%] flex justify-between bg-main-block-title-color text-main-background-color pl-[2rem] rounded-[5px] text-500 text-lg }
-  .professional-line { @apply w-[40%]  md:w-[60%] border-main-block-title-color my-auto }
+  .professional { @apply md:w-full bg-main-background-color p-[1rem] rounded-[10px] }
+  .professional-title { @apply w-[60%]  md:w-[60%] lg:w-[50%] flex justify-between bg-main-block-title-color text-main-background-color pl-[2rem] rounded-[5px] text-500 text-lg }
+  .professional-line { @apply w-[40%]  md:w-[50%] lg:w-[60%] border-main-block-title-color my-auto }
 
   .professional-block { @apply my-[1.5rem] }
 
@@ -157,19 +160,23 @@
   .misc-secondary { @apply text-misc-secondary-color text-400 }
   .misc-primary { @apply text-misc-primary-color }
 
-  .personal-info-block { @apply  w-[260px] rounded-[10px] p-[0.5rem] items-center bg-misc-secondary-color/25 mb-[0.5rem] p-[1rem] text-pretty }
+  .personal-info-block { @apply rounded-[10px] items-center bg-misc-secondary-color/25 mb-[0.5rem] p-[1rem] text-pretty }
   .personal-info-contact { @apply flex flex-row w-[260px] rounded-[10px] py-[0.5rem] items-center bg-misc-secondary-color/25 mb-[0.5rem] text-pretty }
   .personal-info-svg { @apply size-5 mx-[0.5rem] text-pretty }
   .personal-list { @apply w-fit }
+
   .email { @apply flex flex-row justify-items-center items-center text-pretty }
+
   .social { @apply text-pretty break-words }
+
   .language { @apply flex flex-row justify-between w-full }
   .language-table { @apply table-auto border-misc-secondary-color w-full }
   .language-table-body { @apply w-full }
   .language-table-item { @apply w-[50%] }
-  .hobby-container { @apply grid gap-2 grid-cols-3 md:grid-cols-2 justify-items-center items-center text-pretty }
+
+  .hobby-container { @apply grid gap-2 grid-cols-2 md:grid-cols-4 justify-items-center items-center text-pretty }
   .hobby-item { @apply flex flex-col justify-items-center items-center text-pretty my-auto }
-  .hobby-image-container { @apply h-[3rem] justify-items-center self-center text-pretty }
-  .hobby-image { @apply justify-items-center h-[2.8rem] my-auto text-misc-primary-color }
+  .hobby-image-container { @apply h-[2rem] justify-items-start self-center text-pretty }
+  .hobby-image { @apply h-[2rem] my-auto text-misc-primary-color }
 
 }
