--- a/portfolio/src/app/utils/download/download.component.html
+++ b/portfolio/src/app/utils/download/download.component.html
@@ -1,4 +1,4 @@
-<a href="portfolio.png" download="{{ fileName }}" >
+<a href="CV-AgustinaCasarone-English-SEP2024.pdf" download="{{ fileName }}" >
   <svg xmlns="http://www.w3.org/2000/svg"
   (click)="onDownload()"
   fill="none"
