--- a/portfolio/src/app/utils/professional-block/professional-block.component.html
+++ b/portfolio/src/app/utils/professional-block/professional-block.component.html
@@ -1,7 +1,7 @@
 <div class="professional-block">
   <h3 class="professional-name">
     @if (link) {
-      <a href="{{ link }}" class="underline" target="_blank" rel="noopener noreferrer">{{ name }}</a>
+      <a href="{{ link }}" class="link" target="_blank" rel="noopener noreferrer">{{ name }}</a>
     }
     @else {
       {{ name }}
@@ -26,13 +26,13 @@
 
   @if (design) {
     <div class="underline">
-      <a href="{{ design }}" class="underline" target="_blank" rel="noopener noreferrer">Check the design here</a>
+      <a href="{{ design }}" class="link" target="_blank" rel="noopener noreferrer">Check the design here</a>
     </div>
   }
 
   @if (repository) {
     <div class="underline">
-      <a href="{{repository}}" class="underline" target="_blank" rel="noopener noreferrer">Check the repository here</a>
+      <a href="{{repository}}" class="link" target="_blank" rel="noopener noreferrer">Check the repository here</a>
     </div>
   }
 
@@ -42,7 +42,7 @@
   </div>
 
   @if (technologies && technologies.length > 0) {
-    <h5 class="mt-[1rem]">Technologies</h5>
+    <h5 class="mt-[1rem] text-main-title-color">Technologies</h5>
     <div class="professional-technologies">
       @for (tech of technologies; track $index) {
         <p>{{ tech }}</p>
