--- a/portfolio/src/app/utils/professional-block/professional-block.component.html
+++ b/portfolio/src/app/utils/professional-block/professional-block.component.html
@@ -50,7 +50,7 @@
     <h5 class="mt-[1rem] text-main-title-color">Technologies</h5>
     <div class="professional-technologies">
       @for (tech of technologies; track $index) {
-        <p>{{ tech }}</p>
+        <p>{{ tech | translate}}</p>
       }
     </div>
   }
