FIX: nav-bar style

--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -128,17 +128,16 @@
 
 @layer components {
 
-  portfolio-nav-bar { @apply fixed bottom-[1.5rem] right-[1.5rem] flex }
+  portfolio-nav-bar { @apply fixed top-[1.5rem] right-[1.5rem] }
+  .portfolio-nav-bar { @apply flex flex-col  }
 
-  .portfolio-nav-bar { @apply bg-main-background-color/95 text-main-background-color px-[2rem] }
-  .nav-button { @apply cursor-pointer h-[1.5rem] w-auto my-[0.5rem] justify-items-center }
-  .language-toggle-list { @apply w-min }
+  .nav-button { @apply bg-detail-complementary border-[2px] rounded-full border-detail cursor-pointer h-[2rem] w-[2rem] items-center justify-center }
+  .language-toggle-list { @apply w-min fixed right-[1.5rem] }
 
   .portfolio-body { @apply  bg-gradient-to-b from-page-backgound-top-gradient via-page-backgound-mid-gradient to-page-backgound-bottom-gradient }
 
   .personal { @apply pr-[2rem] misc-primary }
 
-  // .presentation { @apply border-[1px] rounded border-main-title-color my-[1rem] p-[1rem] text-main-description-color transition ease-in-out delay-150 bg-page-backgound-mid-gradient-light/20 hover:-translate-y-1 hover:scale-105 hover:bg-gradient-to-br hover:from-page-backgound-top-gradient-light/15 hover:via-page-backgound-mid-gradient-light/15 hover:to-page-backgound-bottom-gradient-light/15 duration-300 motion-reduce:transition-none motion-reduce:hover:transform-none }
   .presentation-title { @apply my-[0.75rem] text-700 text-main-description-color text-pretty text-[1.5rem] leading-[2rem] }
   .presentation-description { @apply text-[1.5rem] my-[0.5rem] leading-[1.5rem] text-justify }
 
