FIX education translation + personal info translation

--- a/portfolio/src/app/views/identity/identity.component.html
+++ b/portfolio/src/app/views/identity/identity.component.html
@@ -1,9 +1,9 @@
 <h1 class="misc-secondary">
-  {{ personalInfoDetail.lastName }}
+  {{ personalInfoDetail.lastName | translate }}
 </h1>
 <h1>
-  {{ personalInfoDetail.firstName }}
+  {{ personalInfoDetail.firstName | translate }}
 </h1>
 <p class="misc-secondary text-800">
-  {{ personalInfoDetail.role }}
+  {{ personalInfoDetail.role | translate }}
 </p>
