--- a/portfolio/src/app/views/presentation/presentation.component.html
+++ b/portfolio/src/app/views/presentation/presentation.component.html
@@ -6,13 +6,13 @@
 @if(!isToggled){
   <article class="presentation">
     <span class="presentation_lg">
-        <span class="presentation_sl"></span>
-        <span class="presentation_text">
-          <h2> {{ presentation.title }} </h2>
-          <p class="presentation-description"> {{ presentation.description }} </p>
-          <h3> 💻 Professional Background </h3>
-          <p> {{ presentation.proffesionalBackground }} </p>
-        </span>
+      <span class="presentation_sl"></span>
+      <span class="presentation_text">
+        <h2>{{ 'presentation.title' | translate }}</h2>
+        <p class="presentation-description">{{ 'presentation.description' | translate }}</p>
+        <h3>💻 Professional Background</h3>
+        <p>{{ 'presentation.professional_background' | translate }}</p>
+      </span>
     </span>
   </article>
 
