--- a/portfolio/src/app/utils/link-button/link-button.component.scss
+++ b/portfolio/src/app/utils/link-button/link-button.component.scss
@@ -1,6 +1,6 @@
 /* From Uiverse.io by alshahwan */
 button {
-  background-color: #0f1923;
+  background-color: rgba(2, 12, 44, 0.316);
   border: 1px solid rgba(245, 245, 245, 1);
   padding: 5px;
   position: relative;
