--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -128,11 +128,12 @@
 
 @layer components {
 
-  portfolio-nav-bar { @apply fixed top-[1.5rem] right-[1.5rem] }
+  portfolio-nav-bar { @apply fixed top-[1rem] right-[1rem] z-50 }
   .portfolio-nav-bar { @apply flex flex-col  }
 
-  .nav-button { @apply bg-detail-complementary border-[2px] rounded-full border-detail cursor-pointer h-[2rem] w-[2rem] items-center justify-center }
-  .language-toggle-list { @apply w-min fixed right-[1.5rem] }
+  .nav-button { @apply bg-detail-complementary border-[2px] rounded-full border-detail cursor-pointer h-[2rem] w-[2rem] items-center justify-center mb-1 hover:transition-all hover:bg-detail-third hover:duration-[0.25s] }
+  .language-toggle-list { @apply w-[4.5rem] p-[5px] place-content-center rounded fixed right-[1.5rem] transform translate-y-2/4 border-detail bg-detail-complementary }
+  .language-button { @apply w-[3.5rem] place-content-center hover:transition-all hover:bg-detail-third hover:duration-[0.25s]  }
 
   .portfolio-body { @apply  bg-gradient-to-b from-page-backgound-top-gradient via-page-backgound-mid-gradient to-page-backgound-bottom-gradient }
 
